# sumit-sampang-rai.github.io

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  test.py
.github/workflows/: ci-cd.yml
css/: style.css
data/: data.json  data.yml
js/: script.js
src/: build.py
src/css/: style.css
src/data/: data.yml
src/js/: script.js
src/templates/: cv_template.html  resume_template.html
